--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
 ﻿@import url('./components/reset.css');
 @import url('./components/fonts.css');
 @import url('./components/flexbox.css');
+@import url('./components/colors.css');
+@import url('./components/sizes.css');
+@import url('./components/pseudos.css');
+@import url('./components/keyframes.css');
