--- a/assets/css/components/fonts.css
+++ b/assets/css/components/fonts.css
@@ -33,3 +33,15 @@ h1, h2 {
   line-height: 37px;
   text-transform: uppercase;
 }
+
+.event a, .event p {
+  text-transform: uppercase;
+}
+
+.event a {
+  font-size: 23px;
+  line-height: 35px;
+}
+.event p {
+  font-size: 18.5px;
+}
