--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,6 @@
 @import url('./components/fonts.css');
 @import url('./components/flexbox.css');
 @import url('./components/colors.css');
-@import url('./components/sizes.css');
+@import url('./components/layout.css');
 @import url('./components/pseudos.css');
 @import url('./components/keyframes.css');
