--- a/assets/css/components/layout.css
+++ b/assets/css/components/layout.css
@@ -32,7 +32,7 @@ header a {
   position: relative;
 }
 
-.header-meet, .events {
+.header-meet, section {
   width: 100%;
   height: 100vh;
   position: relative;
@@ -73,7 +73,6 @@ header a {
   animation: hide-car 1s ease-in-out;
 }
 
-
 .event {
   width: 22%;
 }
@@ -91,4 +90,21 @@ header a {
 }
 .events h2 {
   margin-bottom: 35px;
+}
+.event {
+  transition: .4s ease-in-out;
+}
+.event:hover {
+  transform: scale(1.15);
+}
+
+.restaurant-text {
+  width: 640px;
+  height: 80%;
+  padding: 0 60px 0 40px;
+  transform: translateX(-40px);
+}
+
+.restaurant-text p {
+  margin: 15px 0 25px;
 }
