--- a/assets/css/components/layout.css
+++ b/assets/css/components/layout.css
@@ -32,6 +32,10 @@ header a {
   position: relative;
 }
 
+header #logo {
+  margin: 0 8%;
+}
+
 .header-meet, section {
   width: 100%;
   height: 100vh;
@@ -50,14 +54,26 @@ header a {
   margin: 9px 15px;
 }
 
-.carousel {
+.carousel, .video {
   height: 100vh;
   width: 100vw;
   max-height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
+  box-sizing: border-box;
 }
+
+video {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+}
+
+
 .carousel > div {
   position: absolute;
   width: 100%;
@@ -107,4 +123,12 @@ header a {
 
 .restaurant-text p {
   margin: 15px 0 25px;
+}
+
+
+
+
+
+.item-mobile {
+  display: none;
 }
