--- a/assets/css/components/pseudos.css
+++ b/assets/css/components/pseudos.css
@@ -31,6 +31,12 @@ header #logo::after, #reservate::after {
   left: calc(50% - 55.25px);
 }
 
-section p {
-  text-align: justify;
+.video::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 200px;
+  background-image: linear-gradient(to bottom, transparent, #121212 90%, #090909);
+  bottom: 0;
+  z-index: 2;
 }
