Video-to-main smooth gradient, restaurant section

--- a/assets/css/components/colors.css
+++ b/assets/css/components/colors.css
@@ -65,5 +65,5 @@ main {
 }
 
 .restaurant-text {
-  background-image: linear-gradient(to right, transparent, #100e11, #0f0c10);
+  background-image: linear-gradient(to right, transparent, #0f0c10);
 }
