--- a/assets/css/components/layout.css
+++ b/assets/css/components/layout.css
@@ -10,7 +10,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 9999;
 }
 
 .header-inner, .meet-wrapper, .main-wrapper {
@@ -119,10 +119,23 @@ video {
   height: 80%;
   padding: 0 60px 0 40px;
   transform: translateX(-40px);
+  position: relative;
+  z-index: 1;
 }
 
 .restaurant-text p {
   margin: 15px 0 25px;
+}
+
+.restaurant-image {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 30%;
+  z-index: 0;
+}
+.restaurant-image img {
+  max-height: 100%;
 }
 
 
