--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,4 @@
 @import url('./components/layout.css');
 @import url('./components/pseudos.css');
 @import url('./components/keyframes.css');
+@import url('./common/audio-button.css');
