--- a/assets/css/components/layout.css
+++ b/assets/css/components/layout.css
@@ -4,13 +4,19 @@ body {
   position: relative;
 }
 
-header {
+header, footer {
   height: 150px;
   width: 100%;
   position: fixed;
-  top: 0;
-  left: 0;
   z-index: 9999;
+  left: 0;
+}
+
+header {
+  top: 0;
+}
+footer {
+  bottom: 0;
 }
 
 .header-inner, .meet-wrapper, .main-wrapper {
