--- a/assets/css/common/audio-button.css
+++ b/assets/css/common/audio-button.css
@@ -13,6 +13,8 @@
   margin-right: -2px;
   display: inline-block;
   transition: .3s ease;
+  position: relative;
+  bottom: 0;
 }
 
 .audio-control:hover span {
