--- a/assets/css/components/pseudos.css
+++ b/assets/css/components/pseudos.css
@@ -7,17 +7,32 @@ body::before {
   background-color: rgba(0, 0, 0, .5);
 }
 
-header a::after {
+header a::before, header a::after {
   position: absolute;
-  content: url('../../img/menu-hover.png');
-  top: calc(50% - 27px);
   left: calc(50% - 23.5px);
-  opacity: 0;
-  transition: .3s ease-in-out;
+  background-image: url('../../img/menu-hover.png');
+  width: 57px;
+  content: '';
+  height: 20px;
+  left: calc(50% - 23.5px);
+  transition: .5s ease-in-out;
+  background-repeat: no-repeat;
 }
 
-header a:hover::after {
-  opacity: 1;
+header a::before {
+  clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+  background-position-y: 0px;
+  top: -14px;
+}
+
+header a::after {
+  background-position-y: -32px;
+  bottom: -12px;
+  clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%);
+}
+
+header a:hover::after, header a:hover::before {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 header #logo::after, #reservate::after {
