--- a/assets/css/common/audio-button.css
+++ b/assets/css/common/audio-button.css
@@ -1,19 +1,17 @@
 .audio-control {
-  position: absolute;
   background-color: transparent;
   height: 20px;
   width: 20px;
   cursor: pointer;
+  position: relative;
 }
 
 .audio-control span {
   width: 3px;
   height: 6px;
   background-color: #fff;
-  margin-right: -2px;
-  display: inline-block;
   transition: .3s ease;
-  position: relative;
+  position: absolute;
   bottom: 0;
 }
 
@@ -23,19 +21,35 @@
 }
 
 .audio-control.audio-active span:nth-child(1) {
-  animation: eq 1s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite;
+  animation: eq 1s ease-in-out infinite;
 }
 .audio-control.audio-active span:nth-child(2) {
-  animation: eq 1.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite;
+  animation: eq 1.5s ease-in-out infinite;
 }
 .audio-control.audio-active span:nth-child(3) {
-  animation: eq 1.1s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite;
+  animation: eq 1.1s ease-in-out infinite;
 }
 .audio-control.audio-active span:nth-child(4) {
-  animation: eq 2.2s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite;
+  animation: eq 2.2s ease-in-out infinite;
 }
 .audio-control.audio-active span:nth-child(5) {
-  animation: eq 1.8s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite;
+  animation: eq 1.8s ease-in-out infinite;
+}
+
+.audio-control span:nth-child(1) {   
+  left: 0px;
+}
+.audio-control span:nth-child(2) {   
+  left: 4px;
+}
+.audio-control span:nth-child(3) {   
+  left: 8px;
+}
+.audio-control span:nth-child(4) {    
+  left: 12px;
+}
+.audio-control span:nth-child(5) {    
+  left: 16px;
 }
 
 @keyframes eq {
@@ -46,18 +60,4 @@
   } 100% {
     height: 6px;
   }
-}
-
-.hidden-button {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
-  z-index: -999;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-}
-.hidden-button.unhidden {
-  z-index: 999;
 }
