--- a/assets/css/components/fonts.css
+++ b/assets/css/components/fonts.css
@@ -16,6 +16,7 @@ body *, * a {
 
 a {
   text-decoration: none;
+  text-transform: uppercase;
 }
 
 header a, section a {
@@ -34,7 +35,7 @@ section p {
   line-height: 32.3px;
 }
 
-.header-meet p, .header-meet > a {
+.header-meet p {
   font-size: 27.67px;
   line-height: 37px;
   text-transform: uppercase;
