--- a/assets/css/components/layout.css
+++ b/assets/css/components/layout.css
@@ -19,7 +19,7 @@ footer {
   bottom: 0;
 }
 
-.header-inner, .meet-wrapper, .main-wrapper {
+.header-inner, .meet-wrapper, .main-wrapper, .footer-inner {
   width: 80%;
   min-width: 1280px;
   margin: 0 auto; 
@@ -142,6 +142,18 @@ video {
 }
 .restaurant-image img {
   max-height: 100%;
+}
+
+
+
+footer a {
+  margin-left: 25px;
+  transition: .5s ease-in-out;
+  position: relative;
+}
+footer a:hover {
+  margin-left: 0px;
+  transform: translateY(-25px);
 }
 
 
